# Aether

./: .gitignore  README.md
obfuscator/: .gitignore  CMakeLists.txt  LICENSE  PROJECT_OVERVIEW.md  README.md  USAGE.md  config.json
obfuscator/docs/: DESIGN.md  DEVELOPMENT.md  TECHNICAL.md
obfuscator/examples/: README.md  password_checker.c  simple_example.c
obfuscator/include/engine/: obfuscation_engine.h
obfuscator/include/parser/: code_parser.h
obfuscator/include/strategy/: obfuscation_strategy.h
obfuscator/include/utils/: config_manager.h  logger.h  random_utils.h
obfuscator/scripts/: build.sh  run_examples.sh
obfuscator/src/: main.cpp
obfuscator/src/asm_rewriter/: asm_rewriter.cpp
obfuscator/src/config/: config_manager.cpp
obfuscator/src/engine/: obfuscation_engine.cpp
obfuscator/src/llvm_pass/: CMakeLists.txt  ObfuscationPass.cpp
obfuscator/src/parser/: code_parser.cpp
obfuscator/src/strategy/: obfuscation_strategy.cpp
obfuscator/src/utils/: logger.cpp  random_utils.cpp
obfuscator/templates/: control_flow_flattening.template  junk_arithmetic.template  opaque_predicates.template  string_encryption.template
obfuscator/tests/: CMakeLists.txt
obfuscator/tests/unit/: basic_test.cpp
